--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<head>
-Adam Sperling
-</head>
-<body>
-Hello!
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    Adam Sperling
+  </head>
+  <body>
+    Hello!
+  </body>
+
+</html>
