--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    Adam Sperling
+    <title>Adam Sperling</title>
   </head>
   <body>
-    Hello!
+    Hello! This is a website!
   </body>
 
 </html>
