--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Adam Sperling</title>
   </head>
   <body>
-    Hello! This is a website!
+    <p>Hello! This is a website!</p>
   </body>
 
 </html>
